--- a/latex/siggraph2013/background.tex
+++ b/latex/siggraph2013/background.tex
@@ -4,10 +4,10 @@
 Related work has tackled problems similar to the one we address in this paper. While our approach builds on some of the ideas and algorithms presented in past reserach, none of these methods alone are sufficient to meet the goals of this paper.
 
 \paragraph{Segmented image colorization}
-In the work most similar in goal to our own, Sauvaget and colleagues describe a system that takes as input images divided into segments and computes a `harmonious' assignment of colors to those segments~\shortcite{ColorizationUsingHarmony}. This system can produce pleasing results, but it is based on ad-hoc `contrast of proportion' rules. These rules require the user to specify the set of colors to be used, and their relative amounts, in advance. Such requirements stand in conflict with our goal of supporting exploratory coloring, in which the user does not know in advance the colors she wants and would like to see many plausible suggestions. In contrast, our model is trained from artist-created images. It does not require the user to specify any colors in advance, but its probabilistic inference framework is general enough to support this input if the user desires it.
+In the work most similar in goal to our own, Sauvaget and colleagues describe a system that takes as input an image divided into segments and a set of colors and computes a `harmonious' assignment of colors to segments~\shortcite{ColorizationUsingHarmony}. This system can produce pleasing results, but it is based on ad-hoc `contrast of proportion' rules. These rules require the user to specify the set of colors to be used, and their relative amounts, in advance. Such requirements stand in conflict with our goal of supporting exploratory coloring, in which the user does not know in advance the colors she wants and would like to see many plausible suggestions. In contrast, our model is trained from artist-created images. It does not require the user to specify any colors in advance, but its probabilistic inference framework is general enough to support this input if the user desires it.
 
 \paragraph{Color harmony \& compatibility}
-The computer graphics, aesthetics, and psychology literatures are replete with theories and models that try to capture the characteristics that make two or more colors compatible with one another~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference}. Recently, O'Donovan and colleagues presented a data-driven model that predicts the numeric ratings people would give to five-color `color themes'~\shortcite{ODonovan}. This model is highly generalizable, and they demonstrate a variety of applications for it, including improving existing themes and suggesting colors to complete a partial theme. Our model includes this compatibility model as one of its terms. However, as we demonstrate in Section ?~\remark{Approach?}, this term alone is insufficient to produce good colorings, as it does not take into account the spatial role each color plays in the pattern. Thus, our model uses the distinguishing features of each pattern region and the relationships between regions to constrain the space of colorings that it will suggest.
+The computer graphics, aesthetics, and psychology literatures are replete with theories and models that try to capture the characteristics that make two or more colors compatible with one another~\cite{CohenOrHarmonization,Munsell,PalmerColorPreference}. Recently, O'Donovan and colleagues presented a data-driven model that predicts the numeric ratings people would give to five-color `color themes'~\shortcite{ODonovan}. This model is highly generalizable, and they demonstrate a variety of applications for it, including improving existing themes and suggesting colors to complete a partial theme. Our model includes this compatibility model as one of its terms. However, as we demonstrate in Section~\ref{sec:approach}, this term alone is insufficient to produce good colorings, as it does not take into account the spatial role each color plays in the pattern. Thus, our model uses the distinguishing features of each pattern region and the relationships between regions to constrain the space of colorings that it will suggest.
 
 \paragraph{Natural image colorization}
 While there is little work directly addressing pattern colorization, researchers have developed many approaches to colorizing grayscale photographic images. By and large, these methods rely either on direct color input from the user~\cite{ScribbleColorization} or from a `source image' whose color properties should be matched~\cite{TransferColorization}. However, there is one approach that works more automatically, using a set of example images as training data~\cite{MultimodalColorization}. It builds up multimodal distributions of color variability given local texture descriptors and combines these into a conditional random field with unary and binary energy terms. The minimum-energy configuration is then found using a graph cut algorithm. Our model employs similar local color distributions but bases them on features from variable-sized pattern regions, rather than small texture patches. We also cast the task of finding good colorizations as a probabilistic inference problem, rather than an optimization. This framework allows our algorithm to explore the space of colorings and suggest multiple good alternatives, whereas a graph cut approach will yield only a single global optimum.
