--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -6,8 +6,6 @@
 \newcommand{\segments}{\mathcal{S}}
 \newcommand{\model}{\mathcal{M}}
 \newcommand{\term}{\mathcal{T}}
-\newcommand{\factor}{f}
-\newcommand{\factors}{\mathcal{F}_\term}
 \newcommand{\weights}{\mathbf{w}}
 \newcommand{\dataset}{\mathcal{D}}
 \newcommand{\variable}[1]{\mathbf{#1}}
@@ -15,16 +13,13 @@
 \newcommand{\colors}{\variable{c}}
 \newcommand{\features}{\variable{f}}
 \newcommand{\termStats}{\Phi_\term}
-\newcommand{\factorStats}{\phi^\term_\factor}
 \newcommand{\expectation}{\mathds{E}}
 
 Notational conventions:
 
-Our model: $\model$. A term in our model: $\term$. A factor from a term: $\factor$. The vector of weights for the entire model: $\weights$. The weight for a particular term: $\weights_\term$.
+Our model: $\model$. A term in our model: $\term$. The vector of weights for the entire model: $\weights$. The weight for a particular term: $\weights_\term$.
 
 A pattern template: $\pattern = (\segments, \groups, \colorVars, \features)$, where $\groups$ is a set of individual groups $\group$, $\segments$ is a set of individual segments $\segment$, $\colorVars$ is a set of color variables, and $\features$ is a set of features.
-
-The set of all factors for a term, unrolled for a particular pattern: $\factors(\pattern)$
 
 The color variable of a group: $\colorVars(\group)$. The color variable of a segment: $\colorVars(\segment)$.
 
@@ -34,14 +29,9 @@ The features of a segment: $\features(\segment)$. The features of a group: $\fea
 
 A training dataset: $\dataset$. An example from a training dataset: $(\pattern, \colors)$.
 
-Sufficient statistics for a term in our model: $\termStats$. Sufficient statistics for an individual factor of a term: $\factorStats$
+Sufficient statistics for a term in our model: $\termStats$.
 
 The probability distribution encoded by our model:
 \begin{equation*}
-p(\pattern : \weights) = \frac{1}{Z_\pattern(\weights)} \prod_{\term \in \model} \exp{\frac{\termStats(\pattern : \weights)}{t}}
-\end{equation*}
-
-The statistics of a term:
-\begin{equation*}
-\termStats(\pattern : \weights) = \weights_\term \cdot \sum_{\factor \in \factors(\pattern)} \factorStats(\colorVars_\pattern, \features_\pattern)
+p(\colors | \pattern : \weights) = \frac{1}{Z_\pattern(\weights)} \prod_{\term \in \model} \exp{\frac{ \weights_\term \cdot \termStats(\colors, \pattern)}{t}}
 \end{equation*}
