--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -15,6 +15,14 @@
 \newcommand{\termStats}{\Phi_\term}
 \newcommand{\expectation}{\mathds{E}}
 
+\newcommand{\groupTerm}{\Phi^{Group}}
+\newcommand{\segTerm}{\Phi^{Seg}}
+\newcommand{\adjTerm}{\Phi^{Adj}}
+\newcommand{\prop}{\text{prop}}
+\newcommand{\neighbors}{n}
+\newcommand{\adjStrength}{\text{str}}
+\newcommand{\size}{A}
+
 Notational conventions:
 
 Our model: $\model$. A term in our model: $\term$. The vector of weights for the entire model: $\weights$. The weight for a particular term: $\weights_\term$.
@@ -34,4 +42,23 @@ Sufficient statistics for a term in our model: $\termStats$.
 The probability distribution encoded by our model:
 \begin{equation*}
 p(\colors | \pattern : \weights) = \frac{1}{Z_\pattern(\weights)} \prod_{\term \in \model} \exp{\frac{ \weights_\term \cdot \termStats(\colors, \pattern)}{t}}
+\end{equation*}
+
+Statistics for group terms:
+\begin{equation*}
+\groupTerm(\colors, \pattern : \prop) = \sum_{\group \in \groups_\pattern} \ln p( \prop( \colors(\group) ) | \features_\pattern(\group)) \cdot \size_\group
+\end{equation*}
+
+Statistics for segment terms:
+\begin{equation*}
+\segTerm(\colors, \pattern : \prop) = \sum_{\segment \in \segments_\pattern} \ln p( \prop( \colors(\segment) ) | \features_\pattern(\segment)) \cdot \size_\segment
+\end{equation*}
+
+Statistics for adjacency terms:
+\begin{equation*}
+\newcommand{\segprime}{\segment^{\prime}}
+\adjTerm(\colors, \pattern : \prop) =
+	\sum_{\segment \in \segments_\pattern}
+		\sum_{\segprime \in \neighbors(\segment); \segprime \neq \segment}
+			\ln p( \prop( \colors(\segment), \colors(\segprime) ) | \features_\pattern(\segment, \segprime) ) \cdot \adjStrength(\segment, \segprime) 
 \end{equation*}
