addressing comment in introduction, making notation a little bit more concise.

--- a/latex/siggraph2013/introduction.tex
+++ b/latex/siggraph2013/introduction.tex
@@ -2,7 +2,7 @@
 \label{sec:introduction}
 
 %% Hook and motivation
-From graphic and web design, to fashion and fabrics, to interior design, colored patterns are everywhere.~\remark{Point to some example(s)?} While almost anyone with normal color vision can distinguish good-looking patterns from bad~\remark{It could be seen as pretty aggressive to start with the assumption that all patterns are either Good or Bad; might be better to suggest that people can say what patterns they like and what they do not like}, \emph{creating} attractive patterns is difficult: it requires an extensive working knowledge of color and spatial aesthetics. For the purposes of this paper, we define a colored pattern to have two parts: a \emph{pattern template}, which is a creative decomposition of space into regions, and a set of \emph{colors} assigned to those regions~\remark{Need to get the `by-numbers' part in here, else we're setting the reader's expectations too high}. Even the more constrained task of coloring an existing pattern template can be challenging, as it still exhbis a daunting array of coloring options. Experienced artists and enthusiasts often seek feedback and inspiration from online communities such as Colourlovers\footnote{http://www.colourlovers.com/}.
+From graphic and web design, to fashion and fabrics, to interior design, colored patterns are everywhere.~\remark{Point to some example(s)?} While almost anyone with normal color vision can distinguish patterns that they like from those they don't, \emph{creating} attractive patterns is difficult: it requires an extensive working knowledge of color and spatial aesthetics. For the purposes of this paper, we define a colored pattern to have two parts: a \emph{pattern template}, which is a creative decomposition of space into regions, and a set of \emph{colors} assigned to those regions~\remark{Need to get the `by-numbers' part in here, else we're setting the reader's expectations too high}. Even the more constrained task of coloring an existing pattern template can be challenging, as it still exhbis a daunting array of coloring options. Experienced artists and enthusiasts often seek feedback and inspiration from online communities such as Colourlovers\footnote{http://www.colourlovers.com/}.
 
 %% Goals
 Wouldn't it be cool to have a tool that could make this process easier by suggesting colorings? Such a tool should generate good-looking patterns--patterns that look like an artist might have made them. It should generate a variety of different suggestions, so that an uncertain or inexperienced user can explore the space of possibilities. It should be able to generate suggestions automatically, but it should also expose controls for users to refine their criteria.
