Touching up the introduction.

--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -263,3 +263,22 @@ language={English}
   year={2009},
   publisher={The MIT Press}
 }
+
+@misc{ArtPrinciples,
+  author={Lovett, John},
+  title={Design and Colour},
+  year={1999},
+  howpublished = "\url{http://www.johnlovett.com/test.htm}",
+  note = {Retrieved January 4, 2013}
+}
+
+@book{ColorHarmonyBook,
+  title={The Complete Color Harmony: Expert Color Information for Professional Color Results},
+  author={Sutton, T. and Whelan, B.M.},
+  isbn={9781592530311},
+  lccn={03022912},
+  series={Color Harmony Series},
+  url={http://books.google.com/books?id=aUnAODzOxksC},
+  year={2004},
+  publisher={Quayside Publishing Group}
+}
