--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -24,41 +24,41 @@
 \newcommand{\adjStrength}{\text{str}}
 \newcommand{\size}{A}
 
-Notational conventions:
+% Notational conventions:
 
-Our model: $\model$. A term in our model: $\term$. The vector of weights for the entire model: $\weights$. The weight for a particular term: $\weights_\term$.
+% Our model: $\model$. A term in our model: $\term$. The vector of weights for the entire model: $\weights$. The weight for a particular term: $\weights_\term$.
 
-A pattern template: $\pattern = (\segments, \groups, \colorVars, \features)$, where $\groups$ is a set of individual groups $\group$, $\segments$ is a set of individual segments $\segment$, $\colorVars$ is a set of color variables, and $\features$ is a set of features.
+% A pattern template: $\pattern = (\segments, \groups, \colorVars, \features)$, where $\groups$ is a set of individual groups $\group$, $\segments$ is a set of individual segments $\segment$, $\colorVars$ is a set of color variables, and $\features$ is a set of features.
 
-The color variable of a group: $\colorVars(\group)$. The color variable of a segment: $\colorVars(\segment)$.
+% The color variable of a group: $\colorVars(\group)$. The color variable of a segment: $\colorVars(\segment)$.
 
-An assignment of colors to color variables: $\colors$.
+% An assignment of colors to color variables: $\colors$.
 
-The features of a segment: $\features(\segment)$. The features of a group: $\features(\group)$. The features of a pair of segments: $\features(\segment_1, \segment_2)$.
+% The features of a segment: $\features(\segment)$. The features of a group: $\features(\group)$. The features of a pair of segments: $\features(\segment_1, \segment_2)$.
 
-A training dataset: $\dataset$. An example from a training dataset: $(\pattern, \colors)$.
+% A training dataset: $\dataset$. An example from a training dataset: $(\pattern, \colors)$.
 
-Sufficient statistics for a term in our model: $\termStats$.
+% Sufficient statistics for a term in our model: $\termStats$.
 
-The probability distribution encoded by our model:
-\begin{equation*}
-p(\colors | \pattern : \weights) = \frac{1}{Z_\pattern(\weights)} \prod_{\term \in \model} \exp{\frac{ \weights_\term \cdot \termStats(\colors, \pattern)}{t}}
-\end{equation*}
+% The probability distribution encoded by our model:
+% \begin{equation*}
+% p(\colors | \pattern : \weights) = \frac{1}{Z_\pattern(\weights)} \prod_{\term \in \model} \exp{\frac{ \weights_\term \cdot \termStats(\colors, \pattern)}{t}}
+% \end{equation*}
 
-Statistics for group terms:
-\begin{equation*}
-\groupTerm(\colors, \pattern) = \sum_{\group \in \groups_\pattern} \ln p( \prop( \colors(\group) ) | \features_\pattern(\group)) \cdot \size_\group
-\end{equation*}
+% Statistics for group terms:
+% \begin{equation*}
+% \groupTerm(\colors, \pattern) = \sum_{\group \in \groups_\pattern} \ln p( \prop( \colors(\group) ) | \features_\pattern(\group)) \cdot \size_\group
+% \end{equation*}
 
-Statistics for segment terms:
-\begin{equation*}
-\segTerm(\colors, \pattern) = \sum_{\segment \in \segments_\pattern} \ln p( \prop( \colors(\segment) ) | \features_\pattern(\segment)) \cdot \size_\segment
-\end{equation*}
+% Statistics for segment terms:
+% \begin{equation*}
+% \segTerm(\colors, \pattern) = \sum_{\segment \in \segments_\pattern} \ln p( \prop( \colors(\segment) ) | \features_\pattern(\segment)) \cdot \size_\segment
+% \end{equation*}
 
-Statistics for adjacency terms:
-\begin{equation*}
-\newcommand{\segprime}{\segment^{\prime}}
-\adjTerm(\colors, \pattern) =
-	\sum_{(\segment, \segprime) \in \adj(\pattern)}
-		\ln p( \prop( \colors(\segment), \colors(\segprime) ) | \features_\pattern(\segment, \segprime) ) \cdot \adjStrength(\segment, \segprime) 
-\end{equation*}
+% Statistics for adjacency terms:
+% \begin{equation*}
+% \newcommand{\segprime}{\segment^{\prime}}
+% \adjTerm(\colors, \pattern) =
+% 	\sum_{(\segment, \segprime) \in \adj(\pattern)}
+% 		\ln p( \prop( \colors(\segment), \colors(\segprime) ) | \features_\pattern(\segment, \segprime) ) \cdot \adjStrength(\segment, \segprime) 
+% \end{equation*}
